Fix mistake in ID

--- a/pages/sample/horizontal-separator.html
+++ b/pages/sample/horizontal-separator.html
@@ -66,5 +66,5 @@ permalink: "components/horizontal-separator.html"
 <p>Do not use horizontal separators to build a pseudo table.<br>
 Do not abuse horizontal separators and avoid separating content that belongs together. If a section is lengthy, consider adding headings and removing unnecessary words. </p>
 
-<h2 ic="Accessibility">Accessibility</h2>
+<h2 id="Accessibility">Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
