Move progress tracker to pattern

--- a/pages/patterns.html
+++ b/pages/patterns.html
@@ -5,9 +5,6 @@ layout: patterns.njk
 permalink: "patterns.html"
 ---
 
-
-
-
 <h1 class="mt-lg-0">Patterns</h1>
 <p>
  State Template content patterns are content modules and design solutions for specific user-focused tasks. Patterns
@@ -15,161 +12,141 @@ permalink: "patterns.html"
  one or more <a href="/components.html">components</a> and explain how to adapt them to the specific context.
 </p>
 
-
 <div class="row">
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/card-grid.html"
+  <div class="col-md-4 m-t-md">
+    <a href="/patterns/card-grid.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
    title="Blurbs examples">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-blurbs.jpg" alt="Blurbs illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Card grid</h3>
-    <p class="font-size-16 color-black">Card grid is a great way to showcase small bits of important information
+      <div class="p-a-md d-flex align-content-center">
+        <img src="/images/components/icon-blurbs.jpg" alt="Blurbs illustration" class="img-fluid">
+      </div>
+      <div class="p-a">
+        <h3 class="h5 m-t-0">Card grid</h3>
+        <p class="font-size-16 color-black">Card grid is a great way to showcase small bits of important information
     </p>
-   </div>
-  </a>
- </div>
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/hero-banner.html"
+      </div>
+    </a>
+  </div>
+  <div class="col-md-4 m-t-md">
+    <a href="/patterns/hero-banner.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Alert banner component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-banner.jpg" alt="Banner component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Hero banner</h3>
-    <p class="font-size-16 color-black">The banner component is a full screen hero banner</p>
-   </div>
-  </a>
- </div>
+      <div class="p-a-md d-flex align-content-center">
+        <img src="/images/components/icon-banner.jpg" alt="Banner component" class="img-fluid">
+      </div>
+      <div class="p-a">
+        <h3 class="h5 m-t-0">Hero banner</h3>
+        <p class="font-size-16 color-black">The banner component is a full screen hero banner</p>
+      </div>
+    </a>
+  </div>
 
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/feature-card.html"
+  <div class="col-md-4 m-t-md">
+    <a href="/patterns/feature-card.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
    title="Feature Card examples">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-feature.jpg" alt="Feature Card illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Feature card</h3>
-    <p class="font-size-16 color-black">A highlight space on the homepage with text, image, and a button
+      <div class="p-a-md d-flex align-content-center">
+        <img src="/images/components/icon-feature.jpg" alt="Feature Card illustration" class="img-fluid">
+      </div>
+      <div class="p-a">
+        <h3 class="h5 m-t-0">Feature card</h3>
+        <p class="font-size-16 color-black">A highlight space on the homepage with text, image, and a button
     </p>
-   </div>
-  </a>
- </div>
+      </div>
+    </a>
+  </div>
 </div>
 
-
-
-
 <div class="row">
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/figure.html"
+  <div class="col-md-4 m-t-md">
+    <a href="/patterns/figure.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
    title="Figure with Captions examples">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-figure.jpg" alt="Figure with Captions illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Figure with captions</h3>
-    <p class="font-size-16 color-black">Figure with captions displays a photo with a short title/description below it
+      <div class="p-a-md d-flex align-content-center">
+        <img src="/images/components/icon-figure.jpg" alt="Figure with Captions illustration" class="img-fluid">
+      </div>
+      <div class="p-a">
+        <h3 class="h5 m-t-0">Figure with captions</h3>
+        <p class="font-size-16 color-black">Figure with captions displays a photo with a short title/description below it
     </p>
-   </div>
-  </a>
- </div>
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/link-grid.html"
+      </div>
+    </a>
+  </div>
+  <div class="col-md-4 m-t-md">
+    <a href="/patterns/link-grid.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
    title="Link Grid examples">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-grid.jpg" alt="Link Grid illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Link grid</h3>
-    <p class="font-size-16 color-black">Grid of call-to-action buttons for top user tasks and needs
+      <div class="p-a-md d-flex align-content-center">
+        <img src="/images/components/icon-grid.jpg" alt="Link Grid illustration" class="img-fluid">
+      </div>
+      <div class="p-a">
+        <h3 class="h5 m-t-0">Link grid</h3>
+        <p class="font-size-16 color-black">Grid of call-to-action buttons for top user tasks and needs
     </p>
-   </div>
-  </a>
- </div>
+      </div>
+    </a>
+  </div>
 
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/news-list.html"
+  <div class="col-md-4 m-t-md">
+    <a href="/patterns/news-list.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
    title="News List example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-newslist.jpg" alt="News List illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">News list</h3>
-    <p class="font-size-16 color-black">A News list is a list of news headlines with image thumbnails</p>
-   </div>
-  </a>
- </div>
-
+      <div class="p-a-md d-flex align-content-center">
+        <img src="/images/components/icon-newslist.jpg" alt="News List illustration" class="img-fluid">
+      </div>
+      <div class="p-a">
+        <h3 class="h5 m-t-0">News list</h3>
+        <p class="font-size-16 color-black">A News list is a list of news headlines with image thumbnails</p>
+      </div>
+    </a>
+  </div>
 
 </div>
 
-
-
-
-
 <div class="row">
 
-
-
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/news-article.html"
+  <div class="col-md-4 m-t-md">
+    <a href="/patterns/news-article.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
    title="News article example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-newspage.jpg" alt="News article illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">News article</h3>
-    <p class="font-size-16 color-black">News article is an end page content module for news articles
+      <div class="p-a-md d-flex align-content-center">
+        <img src="/images/components/icon-newspage.jpg" alt="News article illustration" class="img-fluid">
+      </div>
+      <div class="p-a">
+        <h3 class="h5 m-t-0">News article</h3>
+        <p class="font-size-16 color-black">News article is an end page content module for news articles
     </p>
-   </div>
-  </a>
- </div>
+      </div>
+    </a>
+  </div>
 
-
-
-
-
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/profile-banners.html"
+  <div class="col-md-4 m-t-md">
+    <a href="/patterns/profile-banners.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
    title="Profile Banners examples">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-profile.jpg" alt="Profile Banner illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Profile banners</h3>
-    <p class="font-size-16 color-black">A Profile banner is a card designated for displaying state officials and
+      <div class="p-a-md d-flex align-content-center">
+        <img src="/images/components/icon-profile.jpg" alt="Profile Banner illustration" class="img-fluid">
+      </div>
+      <div class="p-a">
+        <h3 class="h5 m-t-0">Profile banners</h3>
+        <p class="font-size-16 color-black">A Profile banner is a card designated for displaying state officials and
      representatives</p>
-   </div>
-  </a>
- </div>
+      </div>
+    </a>
+  </div>
 
-
-
-</div>
-
-
-
-
-
-
-
-<div class="row">
-
-
-
-
-
-
-
+  <div class="col-md-4 m-t-md">
+    <a href="/patterns/progress-tracker.html"
+   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
+   title="Progress tracker examples">
+      <div class="p-a-md d-flex align-content-center">
+        <img src="/images/components/icon-progress.jpg" alt="Progress tracker illustration" class="img-fluid">
+      </div>
+      <div class="p-a">
+        <h3 class="h5 m-t-0">Progress tracker</h3>
+        <p class="font-size-16 color-black">A progress tracker displays the steps and progress through a journey.</p>
+      </div>
+    </a>
+  </div>
 
 </div>
