updated subtitle styles in modal

--- a/pages/sample/modal.html
+++ b/pages/sample/modal.html
@@ -8,7 +8,7 @@ permalink: "components/modal.html"
 
 
 <h1 class="mt-lg-0 m-b-0">Modal</h1>
-<p class="lead mb-5"><em>Other names: popup window, overlay, dialog</em></p>
+<p class="subtitle">Other names: popup window, overlay, dialog</p>
 
 <p>A modal displays content in a temporary window that appears over the current page. </p>
 <p>Modals require an interaction (acknowledge, submit, close) from the visitor before they can return to the content
