updated tabs and featured search pages

--- a/pages/sample/featured-search.html
+++ b/pages/sample/featured-search.html
@@ -1,8 +1,8 @@
 ---
-title: Search bar
+title: Featured search
 landing: Components
 layout: navicons-landing.njk
-permalink: "components/search-bar.html"
+permalink: "structure/featured-search.html"
 navigation: "../modules/nav-flex.html"
 search: Featured
 ---
@@ -17,7 +17,8 @@ search: Featured
    <nav aria-label="You are here">
     <ol class="breadcrumb">
      <li><a href="/index.html" title="Home page">Home</a></li>
-     <li><a href="/components.html" title="Components landing page">Components</a></li>
+     <li><a href="/structure.html" title="Structure landing page">Structure</a></li>
+     <li><a href="/structure/structure-search.html" title="Search landing page">Search</a></li>
      <li class="active">Featured Search</li>
     </ol>
    </nav>
