--- a/pages/sample/tabs.html
+++ b/pages/sample/tabs.html
@@ -79,15 +79,15 @@ permalink: "components/tabs.html"
  navigating away from that page or workflow to complete a task.</p>
 <p>Use tabs when:</p>
 <ul>
- <li>Content can be logically separated into labeled sections</li>
- <li>Visitors do not need to view all the sections at once</li>
+ <li>Content can be logically separated into labeled sections.</li>
+ <li>Visitors do not need to view all the sections at once.</li>
 </ul>
 <p>Test your content without tabs first. It might be better to:</p>
 <ul>
- <li>Split the content across multiple pages</li>
- <li>Keep the content on a single page, separated by headings</li>
+ <li>Split the content across multiple pages.</li>
+ <li>Keep the content on a single page, separated by headings.</li>
  <li>Use <a href="/structure/site-navigation.html">side navigation</a> to let users navigate quickly to specific
-  sections of content</li>
+  sections of content.</li>
 </ul>
 
 <h3>How not to use it</h3>
@@ -95,8 +95,8 @@ permalink: "components/tabs.html"
 <p>Tabs hide content and not everyone will notice them or understand how they work.</p>
 <p>Do not use tabs if your visitors need to:</p>
 <ul>
- <li>Read through all of the content in order, like a step-by-step process</li>
- <li>Compare information in different tabs</li>
+ <li>Read through all of the content in order, like a step-by-step process.</li>
+ <li>Compare information in different tabs.</li>
 </ul>
 
 
