--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -181,52 +181,46 @@ permalink: "visual-design/icons.html"
 
  function buildList(filterLetter) {
   var listHtml = "";
-  var letter = "0";
   var numberOfResults = 0;
   var inputBox = document.querySelector("#iconSearchForm input");
   var searchInput = inputBox ? inputBox.value.trim().toLowerCase() : "";
 
-  const letterList = [...new Set(iconData.icons.map(x=>x.properties.name.charAt(0)) )];
-  const jumpToHtml = "<li><strong>Only show starting with:</strong></li>" 
-   + letterList.map(l=>`<li><a href=javascript:buildList('${l}')>${l.toUpperCase()}</a></li>`).join('')
+  const letterList = [...new Set(iconData.icons.map(x=>x.properties.name.charAt(0)))];
+  const jumpToHtml = `<li><strong>First letter:</strong></li>`
+   + letterList
+    .map(l=>`<li><a href="javascript:buildList('${l}')" ${filterLetter===l ? 'style="font-weight:bold"' : ''}>${l.toUpperCase()}</a></li>`)
+    .join('');
 
-  if (filterLetter) {
-    listHtml += `<p class="h1 group-heading py-3">${filterLetter.toUpperCase()}</p>`
-  }
-
-  for (const icon of iconData.icons) {
-   const iconStrings = [...new Set([icon.properties.name, ...icon.icon.tags])].filter(x=>x.length);
-
-   const iconFirstLetter = icon.properties.name.charAt(0);
-
-   const iconHtml = '\
-    <div class="glyph fs1"> \
-     <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-' + icon.properties.name + '"></span><span class="mls"> \
-       ca-gov-icon-' + icon.properties.name + '</span></div> \
-     <p class="icon-value">' + icon.properties.code.toString(16) + '</p> \
-    </div> \
-    '
-
-   if (!searchInput.length && !filterLetter) {
-    if (letter != iconFirstLetter) {
-     // First letter changed, so display a heading
-     letter = iconFirstLetter;
-     listHtml += `<p class="h1 group-heading py-3">${letter.toUpperCase()}</p>`
+  for (const letter of letterList
+   .filter(l=>!filterLetter || l===filterLetter)) {
+    if (!searchInput.length) {
+      listHtml += `<p class="h1 group-heading py-3">${letter.toUpperCase()}</p>`;
     }
-   }
 
-   if ((!filterLetter && !searchInput.length) || (searchInput && iconStrings.find(x=>x.search(searchInput) > -1)) || iconFirstLetter === filterLetter)  {
-    listHtml += iconHtml;
-    numberOfResults++;
-   }
+    for (const icon of iconData.icons.filter(l=>l.properties.name.charAt(0)===letter)) {
+      const iconStrings = [...new Set([icon.properties.name, ...icon.icon.tags])].filter(x=>x.length);
+
+      if (!searchInput.length || iconStrings.find(x=>x.search(searchInput) > -1)) {
+        listHtml += `
+<div class="glyph fs1">
+  <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-${icon.properties.name}"></span><span class="mls">
+  ca-gov-icon-${icon.properties.name}</span></div>
+  <p class="icon-value">${icon.properties.code.toString(16)}</p>
+</div>
+        `;
+        numberOfResults++;
+      }
+    }
   }
+
   if (searchInput.length) {
    document.querySelector('#jumpToHeading').style.display = "none";
   } else {
    document.querySelector('#jumpToHeading').style.display = "block";
    document.querySelector('#jumpToHeading ol').innerHTML = jumpToHtml;
   }
-  document.querySelector('#fontlist').innerHTML = (numberOfResults) ? listHtml : '<div class="fs1">No icons found.</div>';
+  document.querySelector('#fontlist').innerHTML = listHtml;
+  document.querySelector('#resultcount').innerHTML = numberOfResults ? `${numberOfResults} icon(s) found.` : 'No icons found.';
  }
 
  const myRequest = new Request('https://california.azureedge.net/fonts/selection.json');
@@ -291,7 +285,7 @@ permalink: "visual-design/icons.html"
 
 <!-- START ICOMOON DEMO -->
 <div class="clearfix mhl ptl">
-
- <div id="fontlist"></div>
+<div id="resultcount" class="fs1"></div>
+<div id="fontlist"></div>
 
 </div>
