--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -9,10 +9,16 @@ permalink: "components/form-elements.html"
 
 
 <h1 class="mt-lg-0">Forms elements</h1>
-<p>All form controls automatically receive some global styling. Form elements with
- <code>.form-control</code> are set to <code>width: 100%;</code> by default. Wrap labels and
- controls in <code>.form-group</code> for optimum spacing.
-</p>
+<p>A form allows visitors to submit information to a server.</p>
+<p>Common form elements include:</p>
+<ul>
+ <li>Labels</li>
+ <li>Text fields</li>
+ <li>Checkboxes</li>
+ <li>Buttons</li>
+ <li>Dropdown menus</li>
+ <li>Radio buttons</li>
+</ul>
 
 <h2>Example:</h2>
 {% include "../../src/_includes/modules/form.html" %}
