--- a/pages/sample/horizontal-separator.html
+++ b/pages/sample/horizontal-separator.html
@@ -63,8 +63,8 @@ permalink: "components/horizontal-separator.html"
 <p>Use the horizontal separator to divide sections of content. This breaks up long pages of text and allows visitors to process your most important message first.
 </p>
 <h3>How not to use it</h3>
-<p>Do not use horizontal separators to build a pseudo table.<br>
-Do not abuse horizontal separators and avoid separating content that belongs together. If a section is lengthy, consider adding headings and removing unnecessary words. </p>
+<p>Do not use horizontal separators to build a pseudo table.</p>
+<p>Do not abuse horizontal separators and avoid separating content that belongs together. If a section is lengthy, consider adding headings and removing unnecessary words. </p>
 
 <h2 id="Accessibility">Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
