--- a/pages/sample/progress-tracker.html
+++ b/pages/sample/progress-tracker.html
@@ -128,6 +128,7 @@ permalink: "patterns/progress-tracker.html"
 
 <h3>How not to use it</h3>
 <p>Do not use the progress tracker to display items that are out of order or unrelated. Use bullet points instead.</p>
+<p>Do not use the progress tracker component if there is not a fleshed out process to track.</p>
 
 <h2 id="Accessibility">Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
